tooling/nargo_cli/tests/snapshots/execution_success/signed_overflow_in_else_regression_8617/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: i32, c: bool) -> pub i32 {
    if c {
        a
    } else {
        -a * a
    }
}
