tooling/nargo_cli/tests/snapshots/execution_success/signed_overflow_in_else_regression_8617/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "integer",
          "sign": "signed",
          "width": 32
        },
        "visibility": "private"
      },
      {
        "name": "c",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "integer",
        "sign": "signed",
        "width": 32
      },
      "visibility": "public"
    },
    "error_types": {
      "361444214588792908": {
        "error_kind": "string",
        "string": "attempt to multiply with overflow"
      },
      "1998584279744703196": {
        "error_kind": "string",
        "string": "attempt to subtract with overflow"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _21",
    "private parameters indices : [_0, _1]",
    "public parameters indices : []",
    "return value indices : [_2]",
    "BLACKBOX::RANGE [(_0, 32)] []",
    "BLACKBOX::RANGE [(_1, 1)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (-1, _0) 8589934592 ], EXPR [ 4294967296 ]], outputs: [_3, _4]",
    "BLACKBOX::RANGE [(_3, 2)] []",
    "BLACKBOX::RANGE [(_4, 32)] []",
    "EXPR [ (-1, _0) (-4294967296, _3) (-1, _4) 8589934592 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _0) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_5, _6]",
    "BLACKBOX::RANGE [(_5, 1)] []",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "EXPR [ (1, _0) (-4294967296, _5) (-1, _6) 2147483648 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _4) 2147483648 ], EXPR [ 4294967296 ]], outputs: [_7, _8]",
    "BLACKBOX::RANGE [(_7, 1)] []",
    "BLACKBOX::RANGE [(_8, 32)] []",
    "EXPR [ (1, _4) (-4294967296, _7) (-1, _8) 2147483648 ]",
    "EXPR [ (-1, _5, _7) (1, _5) (-1, _9) 0 ]",
    "EXPR [ (-1, _1) (-1, _10) 1 ]",
    "EXPR [ (-1, _5, _10) (1, _9, _10) 0 ]",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _4, _0) 0 ], EXPR [ 4294967296 ]], outputs: [_11, _12]",
    "BLACKBOX::RANGE [(_11, 32)] []",
    "BLACKBOX::RANGE [(_12, 32)] []",
    "EXPR [ (1, _0, _4) (-4294967296, _11) (-1, _12) 0 ]",
    "EXPR [ (1, _5) (-1, _7) (-1, _13) 0 ]",
    "BRILLIG CALL func 1: inputs: [EXPR [ (1, _13) 0 ]], outputs: [_14]",
    "EXPR [ (1, _13, _14) (1, _15) -1 ]",
    "EXPR [ (1, _13, _15) 0 ]",
    "EXPR [ (-2, _4, _7) (1, _4) (4294967296, _7) (-1, _16) 0 ]",
    "EXPR [ (-2, _0, _5) (1, _0) (4294967296, _5) (-1, _17) 0 ]",
    "EXPR [ (1, _16, _17) (-1, _18) 0 ]",
    "EXPR [ (1, _10, _18) (-1, _19) 0 ]",
    "BLACKBOX::RANGE [(_19, 32)] []",
    "BRILLIG CALL func 0: inputs: [EXPR [ (1, _15) (1, _19) 2147483647 ], EXPR [ 4294967296 ]], outputs: [_20, _21]",
    "BLACKBOX::RANGE [(_20, 1)] []",
    "BLACKBOX::RANGE [(_21, 32)] []",
    "EXPR [ (1, _15) (1, _19) (-4294967296, _20) (-1, _21) 2147483647 ]",
    "EXPR [ (-1, _10, _20) 0 ]",
    "EXPR [ (-1, _0, _1) (-1, _10, _12) (1, _2) 0 ]",
    "unconstrained func 0",
    "[Const { destination: Direct(10), bit_size: Integer(U32), value: 2 }, Const { destination: Direct(11), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(10), offset_address: Direct(11) }, BinaryFieldOp { destination: Direct(2), op: IntegerDiv, lhs: Direct(0), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Mul, lhs: Direct(2), rhs: Direct(1) }, BinaryFieldOp { destination: Direct(1), op: Sub, lhs: Direct(0), rhs: Direct(1) }, Mov { destination: Direct(0), source: Direct(2) }, Stop { return_data: HeapVector { pointer: Direct(11), size: Direct(10) } }]",
    "unconstrained func 1",
    "[Const { destination: Direct(21), bit_size: Integer(U32), value: 1 }, Const { destination: Direct(20), bit_size: Integer(U32), value: 0 }, CalldataCopy { destination_address: Direct(0), size_address: Direct(21), offset_address: Direct(20) }, Const { destination: Direct(2), bit_size: Field, value: 0 }, BinaryFieldOp { destination: Direct(3), op: Equals, lhs: Direct(0), rhs: Direct(2) }, JumpIf { condition: Direct(3), location: 8 }, Const { destination: Direct(1), bit_size: Field, value: 1 }, BinaryFieldOp { destination: Direct(0), op: Div, lhs: Direct(1), rhs: Direct(0) }, Stop { return_data: HeapVector { pointer: Direct(20), size: Direct(21) } }]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": [
    "directive_integer_quotient",
    "directive_invert"
  ]
}
