tooling/nargo_cli/tests/snapshots/execution_success/signed_overflow_in_else_regression_8617/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: i32, v1: u1):
    (no terminator instruction)
}
[signed_overflow_in_else_regression_8617] Circuit output: -771254105
